create a form for user to input number. Create destination for final result to come later

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Mr. Roger's Beep Beep Boop Boop</title>
+  <title>Mr. Roboger's Beep Beep Boop Boop</title>
 </head>
 <body>
   
-
+  <form id="numberForm">
+    <div class="form-group">
+      <label for="inputNumber">Count To:</label>
+      <input id="inputNumber" class="form-control" type="number">
+    </div>
+    
+    <button type="submit" class="btn">Count!!!</button>
+  </form>
+  <div id="result">
+  </div>
 
 </body>
 </html>
