update the css styles to give it a mr. roger's color theme

--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
   <title>Mr. Roboger's Beep Beep Boop Boop</title>
 </head>
 <body>
-  <h1>Mr Roboger's Neighborhood Beep Beep Boop!</h1>
-  <form id="numberForm">
-    <div class="form-group">
-      <label for="inputNumber">Count To:</label>
-      <input id="inputNumber" class="form-control" type="number">
+  <div class="container">
+    <div class="header">
+      <h1>Welcome To: Mr Roboger's Neighborhood!</h1>
+      <p>Beep Boop!</p>
     </div>
-    
-    <button type="submit" class="btn">Count!!!</button>
-  </form>
-  <div id="result">
+    <div class="userSection">
+      <form id="numberForm">
+        <div class="form-group">
+          <label for="inputNumber">Count To:</label>
+          <input id="inputNumber" class="form-control" type="number">
+        </div>
+        
+        <button type="submit" class="btn">Count!!!</button>
+      </form>
+      <div id="result">
+      </div>
+    </div>
   </div>
-
 </body>
 </html>
