--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="header">
       <h1>Welcome To: Mr Roboger's Neighborhood!</h1>
-      <p>Beep Boop!</p>
+      <p>-Beep! Boop!-</p>
     </div>
     <div class="userSection">
       <form id="numberForm">
